# session-settings

./: README.md  default.nix  meson.build  meson_options.txt
.github/workflows/: main.yml
applications/: defaults.list  meson.build  pantheon-mimeapps.list
autostart/: bluetooth-applet-pantheon.desktop  cerbere.desktop  gdu-notification-daemon-pantheon.desktop  gnome-fallback-mount-helper-pantheon.desktop  gnome-keyring-gpg-pantheon.desktop  gnome-keyring-pkcs11-pantheon.desktop  gnome-keyring-secrets-pantheon.desktop  gnome-keyring-ssh-pantheon.desktop  gnome-screensaver-pantheon.desktop  gnome-settings-daemon-pantheon.desktop  gnome-sound-applet-pantheon.desktop  gnome-user-share-pantheon.desktop  gsettings-data-convert-pantheon.desktop  gwibber-pantheon.desktop  io.elementary.cerbere.desktop  meson.build  onboard-autostart-pantheon.desktop  orca-autostart-pantheon.desktop  org.gnome.SettingsDaemon.A11yKeyboard-pantheon.desktop  org.gnome.SettingsDaemon.A11ySettings-pantheon.desktop  org.gnome.SettingsDaemon.Datetime-pantheon.desktop  org.gnome.SettingsDaemon.DiskUtilityNotify-pantheon.desktop  org.gnome.SettingsDaemon.Keyboard-pantheon.desktop  org.gnome.SettingsDaemon.Orientation-pantheon.desktop  org.gnome.SettingsDaemon.PrintNotifications-pantheon.desktop  org.gnome.SettingsDaemon.Rfkill-pantheon.desktop  org.gnome.SettingsDaemon.ScreensaverProxy-pantheon.desktop  org.gnome.SettingsDaemon.Sound-pantheon.desktop  org.gnome.SettingsDaemon.XRANDR-pantheon.desktop  polkit-gnome-authentication-agent-1-pantheon.desktop  slingshot-autostart.desktop  telepathy-indicator-pantheon.desktop  user-dirs-update-gtk-pantheon.desktop  vino-server-pantheon.desktop
autostart/gsd/: org.gnome.SettingsDaemon.Clipboard-pantheon.desktop  org.gnome.SettingsDaemon.Color-pantheon.desktop  org.gnome.SettingsDaemon.Housekeeping-pantheon.desktop  org.gnome.SettingsDaemon.MediaKeys-pantheon.desktop  org.gnome.SettingsDaemon.Mouse-pantheon.desktop  org.gnome.SettingsDaemon.Sharing-pantheon.desktop  org.gnome.SettingsDaemon.Smartcard-pantheon.desktop  org.gnome.SettingsDaemon.Wacom-pantheon.desktop  org.gnome.SettingsDaemon.XSettings-pantheon.desktop
autostart/light-locker/: light-locker-pantheon.desktop
autostart/ubuntu/: gnome-keyring-gpg-pantheon.desktop  gnome-keyring-pkcs11-pantheon.desktop  gnome-keyring-secrets-pantheon.desktop  onboard-autostart-pantheon.desktop  orca-autostart-pantheon.desktop  user-dirs-update-gtk-pantheon.desktop
debian/: 20_pantheon-gconf-default  20_pantheon-gconf-mandatory  changelog  control  copyright  install  io.elementary.session-settings.lintian-overrides  pantheon.desktop  pantheon.session  postinst  postrm  rules  triggers
debian/gconf/: pantheon.default.path  pantheon.mandatory.path
gconf/: pantheon.default.path  pantheon.mandatory.path
gconf/pantheon/default/: 20_pantheon-gconf-default
gconf/pantheon/mandatory/: 20_pantheon-gconf-mandatory
gnome-session/: meson.build  pantheon-wayland.session  pantheon.session  pantheon.session.in
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+173 more)
session/: meson.build  pantheon-wayland.session.in
session/fallback/: onboard-autostart.desktop
systemd/: gnome-session-x11@pantheon.target  meson.build  pantheon-session-x11.target
unity-greeter/: meson.build
wayland-sessions/: meson.build  pantheon-wayland.desktop  pantheon-wayland.desktop.in
xdg-pantheon/: file-roller.desktop  ibus.desktop  im-switch.desktop  nautilus-folder-handler.desktop  nautilus-home.desktop  nautilus.desktop  onboard-settings.desktop  onboard.desktop  orca.desktop  xdiagnose.desktop
xsessions/: meson.build  pantheon.desktop  pantheon.desktop.in
