option('defaults-list', type : 'boolean', value: true,
       description : 'Install defaults.list')

option('patched-gsd-autostarts', type : 'boolean', value: true,
       description : 'Install patched GNOME Settings Daemon autostarts')

option('patched-ubuntu-autostarts', type : 'boolean', value: true,
       description : 'Install patched Ubuntu autostarts')

option('fallback-session', type : 'string', value: 'ubuntu',
       description : 'Fallback session to use for Pantheon')
