option('mimeapps-list', type : 'boolean', value: true,
       description : 'Install Pantheon default mimetype associations')

option('fallback-session', type : 'string', value: 'ubuntu',
       description : 'Fallback session to use for Pantheon')

option('detect-program-prefixes', type: 'boolean', value: false,
       description : 'This is needed for platforms that install packages into individual prefixes (like Guix System or NixOS')
